--- a/views/listings/error.ejs
+++ b/views/listings/error.ejs
@@ -12,7 +12,7 @@
           <div class="contant_box_404">
             <h3 class="h2">Look like you're lost</h3>
             <p>The page you are looking for is not available!</p>
-            <a href="/" class="link_404">Go to Home</a>
+            <a href="/listings" class="link_404">Go to Home</a>
           </div>
         </div>
       </div>
