Fix: Add defensive checks for success and error template variables

--- a/views/listings/error.ejs
+++ b/views/listings/error.ejs
@@ -1,5 +1,7 @@
 <% layout('/listings/layouts/boilerplate') -%>
 
+<% typeof success === 'undefined' && (success = []); typeof error === 'undefined' && (error = []); %>
+
 <section class="page_404">
   <div class="container">
     <div class="row">	
