--- a/views/listings/includes/flash.ejs
+++ b/views/listings/includes/flash.ejs
@@ -1,4 +1,4 @@
-<% if(success && success.length) {%>
+<% if(typeof success !== 'undefined' && success && success.length) {%>
 <div class="alert alert-success alert-dismissible fade show col-6 offset-3" role="alert">
     <button
         type="button" 
@@ -11,7 +11,7 @@
 <%=success%>
 </div>
 <%}%>
-<% if(error && error.length) {%>
+<% if(typeof error !== 'undefined' && error && error.length) {%>
 <div class="alert alert-danger alert-dismissible fade show col-6 offset-3" role="alert">
     <button
         type="button" 
